Working on joining study groups

--- a/app/views/study_groups/allgroups.html.erb
+++ b/app/views/study_groups/allgroups.html.erb
@@ -65,7 +65,7 @@
 <% @allofthemgroups.each do |i| %>
  <% if !StudyGroup.find(i).nil? && i.groupSize != 0 %>
      <!--new thing vikram implemented on 8/26-->
-    <div class = "studygroupdisplaycard ">
+    <div class = "tutordisplaycard searchresultslargecontainer">
 			<div class="groupsize"><%= i.groupSize %></div>
 			<div class="host"><%= i.creatorName %></div>
 			<div class="contact"><%= i.email %></div>
@@ -74,17 +74,18 @@
 			  <i class="fa fa-map-marker fa-2x"></i>
 			  <div class="loc-popup"><%= i.location %></div>
 			</div>			
-		</div>
+	
 		
-		<div class="tutorsendrequest">
-                            <%= form_tag(request_path(name: i.creatorName, groupName: i.groupName), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
-                              <div><p></p></div>
-                     	       <h4 class="findatutor_heading">Join group: </h4>
-                     	       <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control"><br>
-                     	        <input type="text" name="student" id="student" placeholder="Your name"  class = "form-control"><br> 
-                              <input type="submit" name="commit" value="Send" data-disable-with="Send" id="specialanimatedbutton">
-                            <% end %>
-                      </div>
+		  <div class="tutorsendrequest">
+         <%= form_tag(joinGroup_path(email: i.email, studyGroup: i), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
+         <div><p></p></div>
+          <h4 class="findatutor_heading">Join group: </h4>
+          <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control"><br>
+          <input type="text" name="name" id="name" placeholder="Your name"  class = "form-control"><br> 
+          <input type="submit" name="commit" value="Send" data-disable-with="Send" id="specialanimatedbutton">
+          <% end %>
+      </div>
+    </div>
     <br>
   <% end %>
 <% end %>
