fixed some errors on profile page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -996,3 +996,7 @@ ul.tutors li img{
 .spacer{
 	height: 40px;
 }
+#delete_account_admin{
+	transform: scaleX(1.5) scaleY(1.5);
+	margin-left: 2.1vw;
+}
