--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -865,11 +865,24 @@ ul.tutors li img{
 	box-shadow: 5px 5px 8px rgba(8, 26, 128, 0.7);
 	margin-top: 40px;
 }
+.availablespots{
+	box-sizing: border-box;
+	position: absolute;
+	bottom: 0;
+	width: 28%;
+	height: 20%;
+	font-family: "Red Hat Text";
+	text-align: center;
+	font-size: 1vw;
+	background-color: #a434eb;
+	color: white;
+	padding: 10px;
+}
 .groupsize{
 	box-sizing: border-box;
 	float: left;
 	width: 28%;
-	height: 100%;
+	height: 80%;
 	font-family: "Red Hat Text";
 	text-align: center;
 	font-size: 7vw;
@@ -912,14 +925,14 @@ ul.tutors li img{
 .loc-popup{
 	font-family: Poppins;
 	position: absolute;
-	top: -0.9vw;
+	left: 78%;
+	top: -35%;
 	background-color: black;
 	color: white;
 	padding: 1.5vw;
 	// box-sizing: border-box;
 	max-width: 100%;
 	width: 14vw;
-	left: 98%;
 	transform: scaleY(-0.0000000000000000000000000000000001);
 	// visibility: hidden;
 	transition: transform 0.3s;
@@ -999,4 +1012,61 @@ ul.tutors li img{
 #delete_account_admin{
 	transform: scaleX(1.5) scaleY(1.5);
 	margin-left: 2.1vw;
+}
+.studygroupdisplaycard{
+	width: 45vw;
+	height: 12.6vw;
+	margin: auto;
+	/* border: 1px solid black; */
+	background-color: #eee;
+	position: relative;
+	box-shadow: 10px 8px 8px rgba(8, 26, 128, 1);
+	margin-top: 40px;
+}
+.studygroupdisplaycard:hover{
+	cursor: pointer;
+}
+.studygroupdisplaycard:hover .studygroupsendrequest{
+	visibility: visible;
+	transition: 0.2s;
+	transform: scaleX(1);
+}
+.studygroupsendrequest{
+	// border: 1px solid black;
+	float: right;
+	height: 100%;
+	position: absolute;
+	left: 100%;
+	top: 0px !important;
+	width: 15vw;
+	// padding-top: 0px;
+	padding: 10px;
+	transition: 0.2s;
+	transform-origin: 0% 50%;
+	transform: scaleX(0);
+	background: #E0EAFC;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	font-size: 15px;
+}
+.studygroupsendrequest h4{
+	margin-top: -1vw;
+}
+.studygroupsendrequest input{
+	height: 2vw !important;
+	width: 14vw !important;
+	margin-top: 0 !important;
+	margin-bottom: -1vw !important;
+	padding: 1vw;
+	font-size: 0.8vw;
+}
+.studygroupsendrequest #specialanimatedbutton{
+	float: right;
+	width: 12vw;
+	height: 5vw;
+	position: absolute;
+	left: 50%;
+	bottom: 10%;
+	transform: translateX(-50%);
+	padding: 0.1vw;
 }
