Finishing up study group stuff

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -947,6 +947,15 @@ ul.tutors li img{
 	font-family: "Red Hat Text";
 	font-size: 20px;
 }
+.creatorname{
+	float: left;
+	position: absolute;
+	left: 34%;
+	bottom: 2.9vw;
+	font-family: "Red Hat Text";
+	font-size: 20px;	
+	font-weight: bold;
+}
 .fa-question-circle{
 
 }
