--- a/app/views/study_groups/new.html.erb
+++ b/app/views/study_groups/new.html.erb
@@ -81,28 +81,28 @@
       <%= render 'shared/error_messages_group' %>
         <%= f.label :creatorName, "Your Name" %> <span class="required">*</span>
         <%= f.text_field :creatorName, class: 'form-control' %>
-        
+        <br>
+         <%= f.label :email, "Email address" %> <span class="required">*</span>
+        <%= f.text_field :email, class: 'form-control', id: 'bottominput' %>
+        <br>
         <%= f.label :date, "Date" %> <span class="required">*</span>
         <%= f.text_field :date, class: 'form-control' %>
-        
-        <%= f.label :location, "Location" %> <span class="required">*</span>
-        <%= f.text_field :location, placeholder: "Ex: La Crescenta Library, etc. ", class: 'form-control' %>
-        
+        <br>
+        <%= f.label :location, "Location (preferably a public location e.g. La Crescenta Library)" %> <span class="required">*</span>
+        <%= f.text_field :location, class: 'form-control' %>
+        <br>
         <%= f.label :groupSize, "Size of your group" %> <span class="required">*</span>
-         <%= f.text_field :groupSize, placeholder: "*Set above 100 if this doesn't matter", class: 'form-control' %>   
-       
-        <%= f.label :groupName, "What you want to study" %> <span class="required">*</span>
-        <%= f.text_field :groupName, placeholder: "Ex: AP Environmental Science", class: 'form-control' %>
+         <%= f.text_field :groupSize,  class: 'form-control' %>   
+       <br>
+        <%= f.label :groupName, "What you want to study (Ex: AP Calc AB test)" %> <span class="required">*</span>
+        <%= f.text_field :groupName,  class: 'form-control' %>
         <br>
         <%= f.label :time, "Time" %> <span class="required">*</span>
-        <%= f.text_field :time, placeholder: "6:30 p.m.", class: 'form-control', id: 'bottominput' %>
-         
-        <%= f.label :email, "Your email address" %> <span class="required">*</span>
-        <%= f.text_field :email, class: 'form-control', id: 'bottominput' %>
-        
+        <%= f.text_field :time, placeholder: "Ex: 6:30 p.m.", class: 'form-control', id: 'bottominput' %>
+         <br>
          <%= f.label :passkey, "Password (You'll need this to view details or delete your group)" %> <span class="required">*</span>
         <%= f.text_field :passkey, class: 'form-control', id: 'bottominput' %>
-  
+  <br>
         <%= f.submit "Create group", class: "btn btn-primary", id: "specialanimatedbutton" %>
     <% end %>
    
