--- a/app/views/study_groups/ownerPage.html.erb
+++ b/app/views/study_groups/ownerPage.html.erb
@@ -56,7 +56,7 @@
     <h1>Enter password</h1>
 </div>
 <br>
-
+  <div  class="col-md-6 col-md-offset-3">
 <%= form_for(@ownedGroup, url: owner_path) do |f| %>
       
         <%= f.label :email, "Your email" %> <span class="required">*</span>
@@ -67,6 +67,7 @@
   
         <%= f.submit "Find group", class: "btn btn-primary", id: "specialanimatedbutton" %>
     <% end %>
+    </div>
 
             <!--</div>-->
           <!--%= link_to "Create Subject", 'subjectcreate_path', {:style=>"color:#fff;"} %>-->
