--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -132,7 +132,7 @@
             </tr>
             
               <% TutorRequest.all.each do |i| %>
-                <% if i.name == Person.find_by(id: session[:tutor_id]).email %>
+                <% if (i.name == Person.find_by(id: session[:tutor_id]).email) && !i.invisible %>
                  
                   <table style="width:160%" id="VisualSubjects">   <!-- NOTE: I'm creating a new table here instead of adding a row because for some reason it won't add a row to the existing table and display the name, date, and rate outside the table -->
                     <tr>
@@ -140,7 +140,7 @@
                       <th class="requestemail" style="width:25%", "position:absolute"> <%= i.email %></th> 
                       <th class="requestsubject" style="width:20%", "position:absolute"> <%= i.whichSubject %></th> 
                       <th class="requestday" style="width:20%", "position:absolute"> <%= i.time %></th> 
-                      <th class="tutoringoptions" style="width: 20%", "position:absolute"><%= link_to " Delete", requestdelete_path(id: i.id), method: :destroy,
+                      <th class="tutoringoptions" style="width: 20%", "position:absolute"><%= link_to " Delete", requestdelete_path(check: i.id), method: :delete,
                                   data: { confirm: "Are you sure?" } %></th>
                     </tr>
                     <%# session[:selected_subject_id] = i.id %>
@@ -162,9 +162,9 @@
             <!--</tr>-->
           </table>
           </div>
-            <br><br>
+            <br>
             <!--replced your link_to with an a href-->
-           <a data-confirm="Are you sure you want to delete your account?" rel="nofollow" data-method="delete" href="/people/4" style="font-size: 2vw">Delete Account</a>   <!--instead of accountDelete_path just submit the current person DDDD accountDelete_path(id: Tutor.find_by(people_id: @person.id).id)-->   
+           <a data-confirm="Are you sure you want to delete your account?" rel="nofollow" data-method="delete" href="/people/4" style="font-size: 2vw" id="delete">Delete Account</a>   <!--instead of accountDelete_path just submit the current person DDDD accountDelete_path(id: Tutor.find_by(people_id: @person.id).id)-->   
           </h1>
       </section>
     </aside>
