--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -222,7 +222,7 @@ button:focus{
 	width: 100%;
 }
 a{
-	color: black;
+	//color: black;
 	text-decoration: none;
 }
 a:hover{
@@ -576,6 +576,8 @@ aside.col-md-4{
 	height: 100vh;
 	background-image: url("https://fcit.usf.edu/matrix/wp-content/uploads/2016/12/blur-1866562_wide.jpg");
 	background-size: cover;
+	 height:100%;
+    overflow-y:auto;
 	//background: #12c2e9 !important;  /* fallback for old browsers */
 	//background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);  /* Chrome 10-25, Safari 5.1-6 */
 	//background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -675,11 +677,12 @@ ul.tutors li img{
 #VisualTable th{
 	width: 50%;
 	padding: 5px;
-	background-color:rgba(0,0,0,.5);
+	background-color:rgba(255,255,255,0.5);
 }
 #VisualSubjects{
 	width: 75vw !important;
 	color: white;
+	background-color:rgba(255,255,255,.09);
 	table-layout: fixed;
 }
 #VisualSubjects th{
