--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -44,6 +44,7 @@
     </div>
   </nav>
   <% provide(:title, @person.name) %>
+  <br>
   <h1 id="bob" style="font-size:3vw;">Profile - Tutor</h1>
   <div class="row">
     <aside class="col-md-4">
@@ -128,6 +129,7 @@
               <th class="requestemail" style="width:25%", "position:absolute">Email</th> 
               <th class="requestsubject" style="width:20%", "position:absolute">Subject</th> 
               <th class="requestday" style="width:20%", "position:absolute">Day</th> 
+              <th class="requestday" style="width:20%", "position:absolute">Asked on</th> 
               <th class="requestday" style="width:20%", "position:absolute">Options</th> 
             </tr>
             
@@ -140,6 +142,7 @@
                       <th class="requestemail" style="width:25%", "position:absolute"> <%= i.email %></th> 
                       <th class="requestsubject" style="width:20%", "position:absolute"> <%= i.whichSubject %></th> 
                       <th class="requestday" style="width:20%", "position:absolute"> <%= i.time %></th> 
+                      <th class="requestday" style="width:20%", "position:absolute"> <%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%m-%d-%y") %><br>(<%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%I:%M %P") %>)</th> 
                       <th class="tutoringoptions" class="delete" style="width: 20%", "position:absolute"><%= link_to " Delete", requestdelete_path(check: i.id), method: :delete,
                                   data: { confirm: "Are you sure?" } %></th>
                     </tr>
