--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -44,6 +44,7 @@
     </div>
   </nav>
   <% provide(:title, @person.name) %>
+  <br>
   <h1 id="bob" style="font-size:3vw;">Profile - Tutor</h1>
   <div class="row">
     <aside class="col-md-4">
@@ -88,7 +89,7 @@
                       <th class="tutoringday" style="width:22%", "position:absolute"> <%= i.date %></th> 
                       <th class="tutoringrate" style="width:15%", "position:absolute"> <%= i.rate %></th>
                       
-                      <th class="tutoringoptions" style="width: 24%"><%= link_to " Delete", subjectdelete_path(check: i.id), method: :destroy,
+                      <th class="tutoringoptions" class="delete" style="width: 24%"><%= link_to " Delete", subjectdelete_path(check: i.id), method: :destroy,
                                   data: { confirm: "Are you sure?" } %></th>
                     </tr>
                     <%# session[:selected_subject_id] = i.id %>
@@ -128,6 +129,7 @@
               <th class="requestemail" style="width:25%", "position:absolute">Email</th> 
               <th class="requestsubject" style="width:20%", "position:absolute">Subject</th> 
               <th class="requestday" style="width:20%", "position:absolute">Day</th> 
+              <th class="requestday" style="width:20%", "position:absolute">Asked on</th> 
               <th class="requestday" style="width:20%", "position:absolute">Options</th> 
             </tr>
             
@@ -140,7 +142,8 @@
                       <th class="requestemail" style="width:25%", "position:absolute"> <%= i.email %></th> 
                       <th class="requestsubject" style="width:20%", "position:absolute"> <%= i.whichSubject %></th> 
                       <th class="requestday" style="width:20%", "position:absolute"> <%= i.time %></th> 
-                      <th class="tutoringoptions" style="width: 20%", "position:absolute"><%= link_to " Delete", requestdelete_path(check: i.id), method: :delete,
+                      <th class="requestday" style="width:20%", "position:absolute"> <%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%m-%d-%y") %><br>(<%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%I:%M %P") %>)</th> 
+                      <th class="tutoringoptions" class="delete" style="width: 20%", "position:absolute"><%= link_to " Delete", requestdelete_path(check: i.id), method: :delete,
                                   data: { confirm: "Are you sure?" } %></th>
                     </tr>
                     <%# session[:selected_subject_id] = i.id %>
@@ -164,7 +167,7 @@
           </div>
             <br>
             <!--replced your link_to with an a href-->
-           <a data-confirm="Are you sure you want to delete your account?" rel="nofollow" data-method="delete" href="/people/4" style="font-size: 2vw" id="delete">Delete Account</a>   <!--instead of accountDelete_path just submit the current person DDDD accountDelete_path(id: Tutor.find_by(people_id: @person.id).id)-->   
+           <a data-confirm="Are you sure you want to delete your account?" rel="nofollow" data-method="delete" href="/people/4" style="font-size: 2vw" class="delete">Delete Account</a>   <!--instead of accountDelete_path just submit the current person DDDD accountDelete_path(id: Tutor.find_by(people_id: @person.id).id)-->   
           </h1>
       </section>
     </aside>
