--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -45,7 +45,11 @@
   </nav>
   <% provide(:title, @person.name) %>
   <br>
-  <h1 id="bob" style="font-size:3vw;">Profile - Tutor</h1>
+  <% if @person.academy %>
+    <h1 id="bob" style="font-size:3vw;">Profile - Tutor (Academy)</h1>
+  <% else %>
+    <h1 id="bob" style="font-size:3vw;">Profile - Tutor</h1>
+  <% end %>
   <div class="row">
     <aside class="col-md-4">
       <section class="tutor_info">
@@ -76,7 +80,9 @@
             <tr>
               <th class="tutoringsubject" style="width:43%", "position:absolute">Tutoring:</th>
               <th class="tutoringday" style="width:22%", "position:absolute">Day</th> 
-              <th class="tutoringrate" style="width:15%", "position:absolute">Rate</th>
+               <% if !@person.academy %>
+                 <th class="tutoringrate" style="width:15%", "position:absolute">Rate</th>
+              <% end %>
               <th class="tutoringoptions" style="width:24%", "position:absolute">Options</th>
             </tr>
             
@@ -87,7 +93,9 @@
                     <tr>
                       <th class="tutoringsubject" style="width:43%", "position:absolute"> <%= i.name %></th>
                       <th class="tutoringday" style="width:22%", "position:absolute"> <%= i.date %></th> 
-                      <th class="tutoringrate" style="width:15%", "position:absolute"> <%= i.rate %></th>
+                        <% if !@person.academy %>
+                            <th class="tutoringrate" style="width:15%", "position:absolute"> <%= i.rate %></th>
+                        <% end %>
                       
                       <th class="tutoringoptions" class="delete" style="width: 24%"><%= link_to " Delete", subjectdelete_path(check: i.id), method: :destroy,
                                   data: { confirm: "Are you sure?" } %></th>
@@ -142,7 +150,7 @@
                       <th class="requestemail" style="width:25%", "position:absolute"> <%= i.email %></th> 
                       <th class="requestsubject" style="width:20%", "position:absolute"> <%= i.whichSubject %></th> 
                       <th class="requestday" style="width:20%", "position:absolute"> <%= i.time %></th> 
-                      <th class="requestday" style="width:20%", "position:absolute"> <%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%m-%d-%y") %><br>(<%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%I:%M %P") %>)</th> 
+                      <th class="requestday" style="width:20%", "position:absolute"> <%= i.created_at.strftime("%m-%d-%y") %><br>(<%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%I:%M %P") %>)</th> 
                       <th class="tutoringoptions" class="delete" style="width: 20%", "position:absolute"><%= link_to " Delete", requestdelete_path(check: i.id), method: :delete,
                                   data: { confirm: "Are you sure?" } %></th>
                     </tr>
