Add option to clear cv student list (not tutor list) for admins

--- a/app/views/cvstudents/gohere.html.erb
+++ b/app/views/cvstudents/gohere.html.erb
@@ -61,5 +61,10 @@
     <input type="file" name="file" id="file" class="animatedbutton" />
     <input type="submit" name="commit" value="Import" class="btn btn-primary" data-disable-with="Import" />
   </form>
-</center>
+
+
 <!-- CLEAR ALL BUTTON -->
+<br><br>
+<%= link_to "Clear CV Student list", clear_path %>
+
+</center>
