--- a/app/views/people/adminPage.html.erb
+++ b/app/views/people/adminPage.html.erb
@@ -59,7 +59,7 @@
           <div><p></p></div>
           
           <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff;"} %> <!--Edit:'(@oerson)' is redundant after edit_person_path because the edit method in people_controller defines @person -->
-          <div>
+          <div><br>
              <%= link_to "Admin actions", people_path(@person), {:style=>"color:#fff;"} %>
           </div>
          
