--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1032,6 +1032,11 @@ ul.tutors li img{
 	transform: scaleX(1.5) scaleY(1.5);
 	margin-left: 2.1vw;
 }
+#delete_account_admin a{
+	font-size: 0.8rem;
+	padding: 15px;
+	color: black !important;	
+}
 .studygroupdisplaycard{
 	width: 45vw;
 	height: 12.6vw;
