--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -175,7 +175,12 @@
           </div>
             <br>
             <!--replced your link_to with an a href-->
-           <a data-confirm="Are you sure you want to delete your account?" rel="nofollow" data-method="delete" href="/people/4" style="font-size: 2vw" class="delete">Delete Account</a>   <!--instead of accountDelete_path just submit the current person DDDD accountDelete_path(id: Tutor.find_by(people_id: @person.id).id)-->   
+            
+           <!--<a data-confirm="Are you sure you want to delete your account?" rel="nofollow" data-method="delete" href="/people/4" style="font-size: 2vw" class="delete">Delete Account</a>   <!--instead of accountDelete_path just submit the current person DDDD accountDelete_path(id: Tutor.find_by(people_id: @person.id).id)-->   -->
+         
+         <%= link_to " Delete", accountDelete_path(id: Tutor.find_by(people_id: @person.id).id), method: :delete,
+                                  data: { confirm: "Are you sure?" } %>
+         
           </h1>
       </section>
     </aside>
