--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -69,7 +69,7 @@
         <%= f.email_field :email, placeholder: "example@gmail.com", class: 'form-control' %>
         
         <%= f.label :ID_Number %><span class="required">*</span>
-        <%= f.password_field :id_num, placeholder: "123456", class: 'form-control' %>
+        <%= f.text_field :id_num, placeholder: "123456", class: 'form-control' %>
         
         <!--% Cvstudent.all.each do |i| %>-->
         <!--  % if tutor_params[:id_num] == i.idnum %>-->
