--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -98,7 +98,7 @@
         <%= f.password_field :adminKey, class: 'form-control' %>
         
         <%= f.label "Academy member" %>
-        <%= f.check_box :academy, class: 'form-control' %>
+        <%= f.check_box :academy, {class: 'form-control'}, "true", "false"%>        <!--  checked_value = true, unchecked_value = false, -->
   
         <%= f.submit "Create my account", class: "btn btn-primary", id: "specialanimatedbutton" %>
     <% end %>
