--- a/app/views/study_groups/ownerGroup.html.erb
+++ b/app/views/study_groups/ownerGroup.html.erb
@@ -91,8 +91,7 @@
   <!--% else %>-->
   <!--  % redirect_to studygroup_path %>-->
   <% end %>
-	 <%= link_to " Delete", delete_path(id: @ownedGroup.id), method: :delete,
-                                  data: { confirm: "Are you sure?" } %>
+	 
 	<h1>Group members: <%= @ownedGroup.thearray.join(', ') %></h1>
 	
 	<h1>Edit group:</h1>
@@ -124,7 +123,8 @@
         
          <%= f.submit "Save changes", class: "btn btn-primary", id: "specialanimatedbutton" %>
 	<% end %>
-	
+	<%= link_to "DELETE GROUP", {:controller => "study_groups", :action => "destroy", :id => @ownedGroup.id}, method: :delete,
+                                  data: { confirm: "Are you sure?" } %>
                                   
 	</div>
 	
