--- a/app/views/static_pages/forbidden.html.erb
+++ b/app/views/static_pages/forbidden.html.erb
@@ -1,3 +1,5 @@
+
+<body class="forbiddenbody">
 <div class="scene">
   <div class="overlay"></div>
   <div class="overlay"></div>
@@ -14,3 +16,4 @@
   </div>
   <div class="lock"></div>
 </div>
+</body>
