--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -4,52 +4,8 @@
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
 <% provide(:title, 'Become a Tutor') %>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="bg-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/help">Help</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/studygroup">Study Group</a>
-      </li>
-      <% if Person.find_by(id: session[:tutor_id]) %>
-        <div class="dropdown">
-            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Account
-            </button>
-          <ul class="dropdown-menu">
-           <% if Person.find_by(id: session[:tutor_id]).admin? %>
-              <li class = "dropdown-item"><%= link_to "Profile", adminPage_path %></li>
-            <% else %>
-              <li class = "dropdown-item"><%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>
-            <% end %>
-            <li class="divider"></li>
-            <li class = "dropdown-item">
-              <%= link_to "Log out", logout_path, method: :delete %>
-            </li>
-          </ul>
-      </ul>
-      
-      <a class="navbar-brand" href="/home">CV Enterprises</a>
-    </div>
-    </nav>
-      <% else %>
-        
-      <% end %>
-      
-    </ul>
-  </div>
-</nav>
+<script src="jquery-3.3.1.min.js"></script>
+<%= render 'layouts/header' %>
     
 <div class="large_content" id="large_content" style="background-position: 30% 37%">
     <h1> Sign Up</h1>
