--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,56 +6,56 @@
 	<link href="https://fonts.googleapis.com/css?family=Signika|Ubuntu|Quicksand|Lato|Arimo|Cabin" rel="stylesheet">
 	<script src="jquery-3.3.1.min.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body id="body">
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="bg-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/help">Help</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/studygroup">Study Group</a>
-      </li>
+	<%= render 'layouts/header' %>
+<!--	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="bg-dark">-->
+<!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--    <span class="navbar-toggler-icon"></span>-->
+<!--  </button>-->
+<!--  <div class="collapse navbar-collapse" id="navbarText">-->
+<!--    <ul class="navbar-nav mr-auto">-->
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>-->
+<!--      </li>-->
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" href="/about">About</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" href="/help">Help</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" href="/studygroup">Study Group</a>-->
+<!--      </li>-->
       
-      <% if Person.find_by(id: session[:tutor_id]) %>
-        <div class="dropdown">
-            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Account
-            </button>
-          <ul class="dropdown-menu">
-           <% if Person.find_by(id: session[:tutor_id]).admin? %>
-              <li class = "dropdown-item"><%= link_to "Profile", adminPage_path %></li>
-            <% else %>
-              <li class = "dropdown-item"><%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>
-            <% end %>
-            <li class="divider"></li>
-            <li class = "dropdown-item">
-              <%= link_to "Log out", logout_path, method: :delete %>
-            </li>
-          </ul>
-      </ul>
+<!--      <% if Person.find_by(id: session[:tutor_id]) %>-->
+<!--        <div class="dropdown">-->
+<!--            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--              Account-->
+<!--            </button>-->
+<!--          <ul class="dropdown-menu">-->
+<!--           <% if Person.find_by(id: session[:tutor_id]).admin? %>-->
+<!--              <li class = "dropdown-item"><%= link_to "Profile", adminPage_path %></li>-->
+<!--            <% else %>-->
+<!--              <li class = "dropdown-item"><%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>-->
+<!--            <% end %>-->
+<!--            <li class="divider"></li>-->
+<!--            <li class = "dropdown-item">-->
+<!--              <%= link_to "Log out", logout_path, method: :delete %>-->
+<!--            </li>-->
+<!--          </ul>-->
+<!--      </ul>-->
       
-    </div>
+<!--    </div>-->
     
-      <% else %>
+<!--      <% else %>-->
         
-      <% end %>
+<!--      <% end %>-->
       
-    </ul>
-  </div>
-</nav>
-
+<!--    </ul>-->
+<!--  </div>-->
+<!--</nav>-->
+	
 	
 	<div style= "height: 100%" class="large_content">
 		<div class="container">
