--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -59,6 +59,7 @@ button:focus{
 	text-align: center;
 	padding-top: 150px;
 	// background-image: url("https://images.pexels.com/photos/956981/milky-way-starry-sky-night-sky-star-956981.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+//	background-color: rgb(44, 54, 82);
 	background-image: url("https://images.pexels.com/photos/315938/pexels-photo-315938.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -328,6 +329,7 @@ a:hover{
 	max-height: 150vh;
 	height: 100vh;
 	// background-image: url("https://images.pexels.com/photos/315938/pexels-photo-315938.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940") !important;
+//	background-color: rgb(41, 55, 99) !important;
 }
 
 /*Tutor signup css*/
