--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,10 @@
 			<li class="item"><a href="/about">About</a></li>
 			<li class="item"><a href="/help">Help</a></li>
 			<li class="item"><a href="/studygroups">Study Groups</a></li>
+			<li class="item profile">
+				<i class="fa fa-user"></i>
+				<a href="#">Profile</a>
+			</li>
 		</div>
 	</nav>
 </body>
