Replaced navbars with partials

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
 			<li class="item"><a href="/home">Home</a></li>
 			<li class="item"><a href="/about">About</a></li>
 			<li class="item"><a href="/help">Help</a></li>
-			<li class="item"><a href="/studygroups">Study Groups</a></li>
+			<li class="item"><a href="/studygroup">Study Groups</a></li>
 			<li class="item profile">
 			
 				 <% if Person.find_by(id: session[:tutor_id]) %>
