--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,10 +8,10 @@
 		<i class="fa fa-bars fa-2x"></i>
 		<div class="side">
 			<i class="fa fa-times fa-2x"></i>
-			<li class="item"><a href="/home">Home</a></li>
-			<li class="item"><a href="/about">About</a></li>
-			<li class="item"><a href="/help">Help</a></li>
-			<li class="item"><a href="/studygroups">Study Groups</a></li>
+			<li class="item"><a href="/home">Home</a></li><br>
+			<li class="item"><a href="/about">About</a></li><br>
+			<li class="item"><a href="/help">Help</a></li><br>
+			<li class="item"><a href="/studygroups">Study Groups</a></li><br>
 			<li class="item profile">
 				<i class="fa fa-user"></i>
 				<a href="#">Profile</a>
