--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -100,7 +100,7 @@ button:focus{
 	text-align: center;
 	width: 12.625vw;
 	outline: blue;
-	border: 2px solid #3498db;
+	border: 2px solid #12dbff;
 	border-radius: 24px;
 	transition: 0.3s;
 }
@@ -108,7 +108,7 @@ button:focus{
 	text-decoration: none;
 	width: 280px;
 	transition: 0.3s;
-	border-color: #2ecc71;
+	border-color: #12dbff;
 	background-color: #222222;
 	color: white;
 }
@@ -131,7 +131,7 @@ button:focus{
 	text-align: center;
 	width: 200px;
 	outline: blue;
-	border: 2px solid #3498db;
+	border: 2px solid #12dbff;
 	border-radius: 24px;
 	transition: 0.3s;
 }
@@ -144,14 +144,14 @@ button:focus{
 	text-align: center;
 	width: 200px;
 	outline: blue;
-	border: 2px solid #3498db;
+	border: 2px solid #12dbff;
 	border-radius: 24px;
 	transition: 0.3s;
 }
 #specialanimatedbutton:hover{
 	text-decoration: none;
 	transition: 0.3s;
-	border-color: #2ecc71;
+	border-color: #12dbff;
 	background-color: #222222;
 	color: white;
 }
@@ -159,7 +159,7 @@ button:focus{
 	text-decoration: none;
 	width: 280px;
 	transition: 0.3s;
-	border-color: #2ecc71;
+	border-color: #12dbff;
 	background-color: #222222;
 	color: white;
 }
@@ -1152,6 +1152,27 @@ ul.tutors li img{
 	font-size: 50px;
 	list-style: none;
 	margin-bottom: 50px;
+	position: relative;
+	display: inline-block;
+}
+.item:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+.item:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
 .item a{
 	color: rgba(255,255,255,1);
